--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./images/marker-icon.svg"
     />
     <link rel="stylesheet" href="./app.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css"
    integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ=="
    crossorigin=""/>
 
-    <title>Frontend Mentor | IP Address Tracker</title>
+    <title>IP Address Tracker</title>
   </head>
   <body>
     <div class="pageContent">
